--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -66,14 +66,33 @@
 }
 
 .menu {
-  background-color: blueviolet;
-  color: white;
-  box-shadow: 0 3px 6px rgba(91, 65, 209, 0.16),
-    0 3px 6px rgba(91, 65, 209, 0.23);
-  padding: 0 2em 0 2em;
+  background-color: rgb(37, 37, 38);
+  color: rgb(204, 204, 204);
+  box-shadow: rgb(0, 0, 0) 0px 2px 4px;
+  padding: 0.5rem 0 0.5rem 0;
+  // padding: 0;
   text-align: left;
+  z-index: 2000;
 }
 
+.menu > hr {
+  width: 90%;
+}
 .menu > [role="menuitem"] {
   cursor: pointer;
+}
+
+.menu .menu-item:focus {
+  color: rgb(255, 255, 255);
+  background-color: rgb(9, 71, 113);
+}
+
+.menu-item {
+  padding: 0;
+  margin: 0;
+}
+
+.menu-item:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(9, 71, 113);
 }
